# ChordPresenter

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: create_pro_song.py  ew_fetch.py  md_to_pro.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
